Fix icon align

--- a/src/app/components/feedbacks/feedbacks.css
+++ b/src/app/components/feedbacks/feedbacks.css
@@ -13,6 +13,7 @@
     float: left;
     transition-duration: 0.5s;
     width: 100px;
+    text-align: left;
 }
 
 .header .icon:hover {
